# rusite-front-ending

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  tailwind.config.js  trunk.toml
assets/: output.css  s.css  tailwind.css
docs/: note.md
public/: style.css
scripts/: fmt.bat  pre_tasks.bat
src/: app.rs  lib.rs  main.rs  state.rs  utils.rs
src/api/: blog.rs  client.rs  mod.rs
src/components/layout/: backdrop.rs  footer.rs  header.rs  mod.rs
src/components/ui/: backdrop.rs  button.rs  card.rs  icon.rs  mod.rs  overlay.rs  panle.rs
src/models/: blog.rs  markdown.rs  mod.rs  response.rs  user.rs
src/pages/: about.rs  home.rs  loading.rs  mod.rs  notfound.rs
src/pages/blog/: article.rs  index.rs  mod.rs
src/pages/chat/: mod.rs
src/pages/home/: index.rs
src/pages/user/: mod.rs
