[package]
name = "rusite-front-ending"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }

dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4"
leptos_router = "0.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
leptos_meta = "0.8.2"
serde_json = "1.0.140"
leptos_icons = "0.6.1"
icondata = "0.6.0"
chrono-tz = "0.10.4"
web-sys = { version = "0.3.77", features = ["Window"] }
